test/corpus/docs/special-objects/grid-diagrams.txt
====================|||
Big Example
====================|||

grid-rows: 5
style.fill: black

classes: {
  white square: {
    label: ""
    width: 120
    style: {
      fill: white
      stroke: cornflowerblue
      stroke-width: 10
    }
  }
  block: {
    style: {
      text-transform: uppercase
      font-color: white
      fill: darkcyan
      stroke: black
    }
  }
}

flow1.class: white square
flow2.class: white square
flow3.class: white square
flow4.class: white square
flow5.class: white square
flow6.class: white square
flow7.class: white square
flow8.class: white square
flow9.class: white square

dagger engine: {
  width: 800
  class: block
  style: {
    fill: beige
    stroke: darkcyan
    font-color: blue
    stroke-width: 8
  }
}

any docker compatible runtime: {
  width: 800
  class: block
  style: {
    fill: lightcyan
    stroke: darkcyan
    font-color: black
    stroke-width: 8
  }
  icon: https://icons.terrastruct.com/dev%2Fdocker.svg
}

any ci: {
  class: block
  style: {
    fill: gold
    stroke: maroon
    font-color: maroon
    stroke-width: 8
  }
}

windows.class: block
linux.class: block
macos.class: block
kubernetes.class: block

---|||

(source_file
  (declaration
    (identifier)
    (label
      (integer)))
  (declaration
    (identifier_chain
      (identifier_new)
      (identifier_new))
    (label))
  (declaration
    (identifier)
    (block
      (declaration
        (identifier)
        (block
          (declaration
            (identifier)
            (label))
          (declaration
            (identifier)
            (label
              (integer)))
          (declaration
            (identifier)
            (block
              (declaration
                (identifier)
                (label))
              (declaration
                (identifier)
                (label))
              (declaration
                (identifier)
                (label
                  (integer)))))))
      (declaration
        (identifier)
        (block
          (declaration
            (identifier)
            (block
              (declaration
                (identifier)
                (label))
              (declaration
                (identifier)
                (label))
              (declaration
                (identifier)
                (label))
              (declaration
                (identifier)
                (label))))))))
  (declaration
    (identifier_chain
      (identifier_new)
      (identifier_new))
    (label))
  (declaration
    (identifier_chain
      (identifier_new)
      (identifier_new))
    (label))
  (declaration
    (identifier_chain
      (identifier_new)
      (identifier_new))
    (label))
  (declaration
    (identifier_chain
      (identifier_new)
      (identifier_new))
    (label))
  (declaration
    (identifier_chain
      (identifier_new)
      (identifier_new))
    (label))
  (declaration
    (identifier_chain
      (identifier_new)
      (identifier_new))
    (label))
  (declaration
    (identifier_chain
      (identifier_new)
      (identifier_new))
    (label))
  (declaration
    (identifier_chain
      (identifier_new)
      (identifier_new))
    (label))
  (declaration
    (identifier_chain
      (identifier_new)
      (identifier_new))
    (label))
  (declaration
    (identifier)
    (block
      (declaration
        (identifier)
        (label
          (integer)))
      (declaration
        (identifier)
        (label))
      (declaration
        (identifier)
        (block
          (declaration
            (identifier)
            (label))
          (declaration
            (identifier)
            (label))
          (declaration
            (identifier)
            (label))
          (declaration
            (identifier)
            (label
              (integer)))))))
  (declaration
    (identifier)
    (block
      (declaration
        (identifier)
        (label
          (integer)))
      (declaration
        (identifier)
        (label))
      (declaration
        (identifier)
        (block
          (declaration
            (identifier)
            (label))
          (declaration
            (identifier)
            (label))
          (declaration
            (identifier)
            (label))
          (declaration
            (identifier)
            (label
              (integer)))))
      (declaration
        (identifier)
        (label))))
  (declaration
    (identifier)
    (block
      (declaration
        (identifier)
        (label))
      (declaration
        (identifier)
        (block
          (declaration
            (identifier)
            (label))
          (declaration
            (identifier)
            (label))
          (declaration
            (identifier)
            (label))
          (declaration
            (identifier)
            (label
              (integer)))))))
  (declaration
    (identifier_chain
      (identifier_new)
      (identifier_new))
    (label))
  (declaration
    (identifier_chain
      (identifier_new)
      (identifier_new))
    (label))
  (declaration
    (identifier_chain
      (identifier_new)
      (identifier_new))
    (label))
  (declaration
    (identifier_chain
      (identifier_new)
      (identifier_new))
    (label)))

====================|||
Grid Rows & Grid Cols
====================|||

grid-rows: 2
grid-columns: 2
Executive
Legislative
Judicial

---|||

(source_file
  (declaration
    (identifier)
    (label
      (integer)))
  (declaration
    (identifier)
    (label
      (integer)))
  (declaration
    (identifier))
  (declaration
    (identifier))
  (declaration
    (identifier)))


====================|||
Table
====================|||

grid-rows: 2
grid-columns: 4
grid-gap: 0

classes: {
  header: {
    style.underline: true
  }
}

Element.class: header
Atomic Number.class: header
Atomic Mass.class: header
Melting Point.class: header

Hydrogen
1
"1.008"
"-259.16"

Carbon
6
"12.011"
3500

Oxygen
8
"15.999"
"-218.79"

---|||

(source_file
  (declaration
    (identifier)
    (label
      (integer)))
  (declaration
    (identifier)
    (label
      (integer)))
  (declaration
    (identifier)
    (label
      (integer)))
  (declaration
    (identifier)
    (block
      (declaration
        (identifier)
        (block
          (declaration
            (identifier_chain
              (identifier_new)
              (identifier_new))
            (label
              (boolean)))))))
  (declaration
    (identifier_chain
      (identifier_new)
      (identifier_new))
    (label))
  (declaration
    (identifier_chain
      (identifier_new)
      (identifier_new))
    (label))
  (declaration
    (identifier_chain
      (identifier_new)
      (identifier_new))
    (label))
  (declaration
    (identifier_chain
      (identifier_new)
      (identifier_new))
    (label))
  (declaration
    (identifier))
  (declaration
    (identifier))
  (declaration
    (identifier))
  (declaration
    (identifier))
  (declaration
    (identifier))
  (declaration
    (identifier))
  (declaration
    (identifier))
  (declaration
    (identifier))
  (declaration
    (identifier))
  (declaration
    (identifier))
  (declaration
    (identifier))
  (declaration
    (identifier)))

====================|||
Nesting
====================|||

grid-gap: 0
grid-columns: 1
header
body: "" {
  grid-gap: 0
  grid-columns: 2
  content
  sidebar
}
footer

---|||

(source_file
  (declaration
    (identifier)
    (label
      (integer)))
  (declaration
    (identifier)
    (label
      (integer)))
  (declaration
    (identifier))
  (declaration
    (identifier)
    (label)
    (block
      (declaration
        (identifier)
        (label
          (integer)))
      (declaration
        (identifier)
        (label
          (integer)))
      (declaration
        (identifier))
      (declaration
        (identifier))))
  (declaration
    (identifier)))

====================|||
Alignment
====================|||

classes: {
  invisible: {
    style.opacity: 0
    label: a
  }
}

grid-columns: 1
us-east-1: {
  grid-rows: 1
  a
  b
  c
  d
  e
}

us-west-1: {
  grid-rows: 1
  pad1.class: invisible
  pad2.class: invisible
  a
  # Move the label so it doesn't go through the connection
  label.near: bottom-center
}

us-east-1.c -> us-west-1.a

---|||

(source_file
  (declaration
    (identifier)
    (block
      (declaration
        (identifier)
        (block
          (declaration
            (identifier_chain
              (identifier_new)
              (identifier_new))
            (label
              (integer)))
          (declaration
            (identifier)
            (label))))))
  (declaration
    (identifier)
    (label
      (integer)))
  (declaration
    (identifier)
    (block
      (declaration
        (identifier)
        (label
          (integer)))
      (declaration
        (identifier))
      (declaration
        (identifier))
      (declaration
        (identifier))
      (declaration
        (identifier))
      (declaration
        (identifier))))
  (declaration
    (identifier)
      (block
        (declaration
          (identifier)
            (label
              (integer)))
          (declaration
            (identifier_chain
              (identifier_new)
              (identifier_new))
            (label))
          (declaration
            (identifier_chain
              (identifier_new)
              (identifier_new))
            (label))
          (declaration
            (identifier))
          (comment)
          (declaration
            (identifier_chain
              (identifier_new)
              (identifier_new))
            (label))))
  (declaration
    (identifier_chain
      (identifier_new)
      (identifier_new))
    (connection)
    (identifier_chain
      (identifier_new)
      (identifier_new))))
